--- a/css/templatemo-video-catalog.css
+++ b/css/templatemo-video-catalog.css
@@ -536,10 +536,16 @@ video {
     .tm-welcome-container-inner { margin-top: 150px; }
     .tm-welcome-text { font-size: 1.4rem; }
 
-    .tm-video {
-        width: 888px;
-        height: 500px;
-    }
+     #tm-video-container {
+         max-width: 100%;
+         overflow: hidden;
+         background-color: #333;
+     }
+
+     #tm-video {
+         width: 100%;
+         height: auto;
+     }
 
     .tm-logo-container {
         height: 160px;
