--- a/css/templatemo-video-catalog.css
+++ b/css/templatemo-video-catalog.css
@@ -536,8 +536,14 @@ video {
     .tm-welcome-container-inner { margin-top: 150px; }
     .tm-welcome-text { font-size: 1.4rem; }
 
-     #tm-video {
-         width: 100%;
+    #tm-video-container {
+      max-height: 30%;
+      overflow: hidden;
+      background-color: #333;
+    }  
+  
+    #tm-video {
+         max-width:100%;
          height: auto;
      }
 
