--- a/css/templatemo-video-catalog.css
+++ b/css/templatemo-video-catalog.css
@@ -403,7 +403,7 @@ h2, p { color: #666666; }
     background-color: #666;
 }
 
-#tm-fixed-header-bg {}
+#tm-fixed-header-bg {height: auto; width: 100%;}
 .tm-fixed-header-1 { background-image: url("../img/1. Don Don Don - Play & Win.PNG"); filter: brightness(50%);}
 .tm-fixed-header-1_0 { background-image: url("../img/2. Omanji - Play & Win.PNG"); filter: brightness(50%);}
 .tm-fixed-header-1_1 { background-image: url("../img/3. MOA X - New Version of My Ooredoo App_v1.PNG"); filter: brightness(50%);}
